--- a/Stage/contact.html
+++ b/Stage/contact.html
@@ -10,6 +10,7 @@
 <body>
     <nav class="menu">
         <ul>
+            <li><img src="images/test.jpg" alt=""></li>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">Information</a></li>
             <li><a href="contact.html">Contact</a></li>
