--- a/Stage/index.html
+++ b/Stage/index.html
@@ -12,9 +12,11 @@
     <header>
         <nav class="menu">
             <ul>
+                <li><img src="images/test.jpg" alt=""></li>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">Information</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Mon compte</a><img src="images/test.jpg" alt=""></li>
             </ul> 
         </nav>
     </header>
