--- a/Stage/index.html
+++ b/Stage/index.html
@@ -12,100 +12,74 @@
     <header>
         <nav class="menu">
             <ul>
-                <li><img src="images/test.jpg" alt=""></li>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">Information</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="contact.html">Mon compte</a><img src="images/test.jpg" alt=""></li>
+                <li><img src="images/test.jpg" alt="logo blog"></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="page2.html">Page 2</a></li>
+                <li><a href="admin.html">Admin</a></li>
+                <li><a href="compte.html">Mon compte</a></li>
+                <li><img src="images/account.png" alt="logo compte"></li>
             </ul> 
         </nav>
     </header>
     <main>
-        <h1>Blog</h1>
-        <div id="article_principal">
-            <img src="images/test.jpg" alt="">
+        <h1>Mon Blog</h1>
+        <div class="article_principal">
+            <img src="images/test.jpg" alt="image de l'article">
             <article>
                 <p class="date">2010-01-15 13:47:42</p>
                 <h2>Titre article</h2>
                 <p>A cup of joe is an American nickname for a cup of coffee.</p>
+                <a href="article.html"><button>Lire la suite ...</button></a>
+            </article>
         </div>
-        <aside>
-            <div class="article_secondaire">
-                <img src="images/test.jpg" alt="">
-                <article>
-                    <p class="date">2010-01-15 13:47:42</p>
-                    <h2>Titre article</h2>
-                    <p>A cup of joe is an American nickname for a cup of coffee.</p>
-                </article>
-            </div>
-            <div class="article_secondaire">
-                <img src="images/test.jpg" alt="">
-                <article>
-                    <p class="date">2010-01-15 13:47:42</p>
-                    <h2>Titre article</h2>
-                    <p>A cup of joe is an American nickname for a cup of coffee.</p>
-                </article>
-            </div>
-            <div class="article_secondaire">
-                <img src="images/test.jpg" alt="">
-                <article>
-                    <p class="date">2010-01-15 13:47:42</p>
-                    <h2>Titre article</h2>
-                    <p>A cup of joe is an American nickname for a cup of coffee.</p>
-                </article>
-            </div>
-            <div class="article_secondaire">
-                <img src="images/test.jpg" alt="">
-                <article>
-                    <p class="date">2010-01-15 13:47:42</p>
-                    <h2>Titre article</h2>
-                    <p>A cup of joe is an American nickname for a cup of coffee.</p>
-                </article>
-            </div>
-            <div class="article_secondaire">
-                <img src="images/test.jpg" alt="">
-                <article>
-                    <p class="date">2010-01-15 13:47:42</p>
-                    <h2>Titre article</h2>
-                    <p>A cup of joe is an American nickname for a cup of coffee.</p>
-                </article>
-            </div>
-            <div class="article_secondaire">
-                <img src="images/test.jpg" alt="">
-                <article>
-                    <p class="date">2010-01-15 13:47:42</p>
-                    <h2>Titre article</h2>
-                    <p>A cup of joe is an American nickname for a cup of coffee.</p>
-                </article>
-            </div>
-            <div class="article_secondaire">
-                <img src="images/test.jpg" alt="">
-                <article>
-                    <p class="date">2010-01-15 13:47:42</p>
-                    <h2>Titre article</h2>
-                    <p>A cup of joe is an American nickname for a cup of coffee.</p>
-                </article>
-            </div>
-            <div class="article_secondaire">
-                <img src="images/test.jpg" alt="">
-                <article>
-                    <p class="date">2010-01-15 13:47:42</p>
-                    <h2>Titre article</h2>
-                    <p>A cup of joe is an American nickname for a cup of coffee.</p>
-                </article>
-            </div>
-            <div class="article_secondaire">
-                <img src="images/test.jpg" alt="">
-                <article>
-                    <p class="date">2010-01-15 13:47:42</p>
-                    <h2>Titre article</h2>
-                    <p>A cup of joe is an American nickname for a cup of coffee.</p>
-                </article>
-            </div>
-        </aside>
+        <div class="article_principal">
+            <img src="images/test.jpg" alt="image de l'article">
+            <article>
+                <p class="date">2010-01-15 13:47:42</p>
+                <h2>Titre article</h2>
+                <p>A cup of joe is an American nickname for a cup of coffee.</p>
+                <a href="article.html"><button>Lire la suite ...</button></a>
+            </article>
+        </div>
+        <div class="article_principal">
+            <img src="images/test.jpg" alt="image de l'article">
+            <article>
+                <p class="date">2010-01-15 13:47:42</p>
+                <h2>Titre article</h2>
+                <p>A cup of joe is an American nickname for a cup of coffee.</p>
+                <a href="article.html"><button>Lire la suite ...</button></a>
+            </article>
+        </div>
+        <div class="article_principal">
+            <img src="images/test.jpg" alt="image de l'article">
+            <article>
+                <p class="date">2010-01-15 13:47:42</p>
+                <h2>Titre article</h2>
+                <p>A cup of joe is an American nickname for a cup of coffee.</p>
+                <a href="article.html"><button>Lire la suite ...</button></a>
+            </article>
+        </div>
+        <div class="article_principal">
+            <img src="images/test.jpg" alt="image de l'article">
+            <article>
+                <p class="date">2010-01-15 13:47:42</p>
+                <h2>Titre article</h2>
+                <p>A cup of joe is an American nickname for a cup of coffee.</p>
+                <a href="article.html"><button>Lire la suite ...</button></a>
+            </article>
+        </div>
+        <div class="article_principal">
+            <img src="images/test.jpg" alt="image de l'article">
+            <article>
+                <p class="date">2010-01-15 13:47:42</p>
+                <h2>Titre article</h2>
+                <p>A cup of joe is an American nickname for a cup of coffee.</p>
+                <a href="article.html"><button>Lire la suite ...</button></a>
+            </article>
+        </div>
     </main>
     <footer>
-
+        <small>Copyright &copy; 2023. All Rights Reserved</small>
     </footer>
 </body>
 </html>
