--- a/Stage/index.html
+++ b/Stage/index.html
@@ -26,8 +26,8 @@
         <div class="article_principal">
             <img src="images/test.jpg" alt="image de l'article">
             <article>
-                <p class="date">2010-01-15 13:47:42</p>
-                <h2>Titre article</h2>
+                <h2>Titre de l'article</h2>
+                <h3>Catégorie</h3>
                 <p>A cup of joe is an American nickname for a cup of coffee.</p>
                 <a href="article.html"><button>Lire la suite ...</button></a>
             </article>
@@ -35,8 +35,8 @@
         <div class="article_principal">
             <img src="images/test.jpg" alt="image de l'article">
             <article>
-                <p class="date">2010-01-15 13:47:42</p>
-                <h2>Titre article</h2>
+                <h2>Titre de l'article</h2>
+                <h3>Catégorie</h3>
                 <p>A cup of joe is an American nickname for a cup of coffee.</p>
                 <a href="article.html"><button>Lire la suite ...</button></a>
             </article>
@@ -44,8 +44,8 @@
         <div class="article_principal">
             <img src="images/test.jpg" alt="image de l'article">
             <article>
-                <p class="date">2010-01-15 13:47:42</p>
-                <h2>Titre article</h2>
+                <h2>Titre de l'article</h2>
+                <h3>Catégorie</h3>
                 <p>A cup of joe is an American nickname for a cup of coffee.</p>
                 <a href="article.html"><button>Lire la suite ...</button></a>
             </article>
@@ -53,8 +53,8 @@
         <div class="article_principal">
             <img src="images/test.jpg" alt="image de l'article">
             <article>
-                <p class="date">2010-01-15 13:47:42</p>
-                <h2>Titre article</h2>
+                <h2>Titre de l'article</h2>
+                <h3>Catégorie</h3>
                 <p>A cup of joe is an American nickname for a cup of coffee.</p>
                 <a href="article.html"><button>Lire la suite ...</button></a>
             </article>
@@ -62,8 +62,8 @@
         <div class="article_principal">
             <img src="images/test.jpg" alt="image de l'article">
             <article>
-                <p class="date">2010-01-15 13:47:42</p>
-                <h2>Titre article</h2>
+                <h2>Titre de l'article</h2>
+                <h3>Catégorie</h3>
                 <p>A cup of joe is an American nickname for a cup of coffee.</p>
                 <a href="article.html"><button>Lire la suite ...</button></a>
             </article>
@@ -71,8 +71,8 @@
         <div class="article_principal">
             <img src="images/test.jpg" alt="image de l'article">
             <article>
-                <p class="date">2010-01-15 13:47:42</p>
-                <h2>Titre article</h2>
+                <h2>Titre de l'article</h2>
+                <h3>Catégorie</h3>
                 <p>A cup of joe is an American nickname for a cup of coffee.</p>
                 <a href="article.html"><button>Lire la suite ...</button></a>
             </article>
