--- a/Stage/index.html
+++ b/Stage/index.html
@@ -12,12 +12,12 @@
     <header>
         <nav class="menu">
             <ul>
-                <li><img src="images/test.jpg" alt="logo blog"></li>
+                <li class="gauche"><img src="images/test.jpg" alt="logo blog"></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="page2.html">Page 2</a></li>
                 <li><a href="admin.html">Admin</a></li>
                 <li><a href="compte.html">Mon compte</a></li>
-                <li><img src="images/account.png" alt="logo compte"></li>
+                <li class="droite"><img src="images/account.png" alt="logo compte"></li>
             </ul> 
         </nav>
     </header>
