--- a/Stage/index.html
+++ b/Stage/index.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="page2.html">Page 2</a></li>
                 <li><a href="admin.html">Admin</a></li>
-                <li><a href="compte.html">Mon compte</a></li>
+                <li class="compte"><a href="compte.html">Mon compte</a></li>
                 <li class="droite"><img src="images/account.png" alt="logo compte"></li>
             </ul> 
         </nav>
